@@ -1,27 +1,51 @@
 package lotto;
 
-import org.junit.jupiter.api.DisplayName;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
+import java.util.Arrays;
+import java.util.List;
+import lotto.domain.Lotto;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-
-class LottoTest {
-    @DisplayName("로또 번호의 개수가 6개가 넘어가면 예외가 발생한다.")
+public class LottoTest {
     @Test
-    void createLottoByOverSize() {
-        assertThatThrownBy(() -> new Lotto(List.of(1, 2, 3, 4, 5, 6, 7)))
-                .isInstanceOf(IllegalArgumentException.class);
+    public void createLottoTest() {
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+
+        Lotto lotto = new Lotto(numbers);
+
+        assertEquals(numbers, lotto.getNumbers());
     }
 
-    @DisplayName("로또 번호에 중복된 숫자가 있으면 예외가 발생한다.")
     @Test
-    void createLottoByDuplicatedNumber() {
-        // TODO: 이 테스트가 통과할 수 있게 구현 코드 작성
-        assertThatThrownBy(() -> new Lotto(List.of(1, 2, 3, 4, 5, 5)))
-                .isInstanceOf(IllegalArgumentException.class);
+    public void validateNumbersSizeTest() {
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);
+
+        assertThrows(IllegalArgumentException.class, () -> new Lotto(numbers));
     }
 
-    // 아래에 추가 테스트 작성 가능
+    @Test
+    public void validateNumbersDuplicateTest() {
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 5);
+
+        assertThrows(IllegalArgumentException.class, () -> new Lotto(numbers));
+    }
+
+    @Test
+    public void validateNumbersWrongRangeTest() {
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 46);
+
+        assertThrows(IllegalArgumentException.class, () -> new Lotto(numbers));
+    }
+
+    @Test
+    public void ascendingSortNumbersTest() {
+        List<Integer> numbers = Arrays.asList(6, 5, 4, 3, 2, 1);
+        List<Integer> sortedNumbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+
+        Lotto lotto = new Lotto(numbers);
+
+        assertEquals(sortedNumbers, lotto.getNumbers());
+    }
 }
